removed flex-wrap: wrap to see if it would stop looking weird on mobile

--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ put it in a div with this class. */
 
     #menu {
         gap: 0px;
-        flex-wrap: wrap;
+        
     }
 
     .menu-item {
